# simple-bazel-data-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
src/com/example/: BinaryWithData.java
